# base-ml-image

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
